--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/ssr": "latest",
@@ -29,6 +30,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
+    "react-spinners": "^0.15.0",
+    "spinner": "^0.3.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
