--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -29,10 +30,12 @@
     "prisma": "^6.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-loading": "^2.0.3",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.2",
-    "spinner": "^0.3.4",
+    "spinner": "^0.2.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
