--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-navigation-menu": "^1.2.6",
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "10.4.20",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
@@ -25,6 +26,7 @@
     "lucide": "^0.487.0",
     "lucide-react": "^0.468.0",
     "next": "latest",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "prisma": "^6.5.0",
