--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "clsx": "^2.1.1",
     "lucide": "^0.487.0",
     "lucide-react": "^0.468.0",
-    "next": "latest",
+    "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "prisma": "^6.5.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-loading": "^2.0.3",
