--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -33,6 +35,8 @@
     "prettier": "^3.3.3",
     "prisma": "^6.5.0",
     "react": "^19.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
@@ -45,6 +49,7 @@
   "devDependencies": {
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "19.0.2",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.5.2",
