--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@rive-app/react-canvas": "^4.18.9",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@vercel/analytics": "^1.5.0",
@@ -43,6 +44,7 @@
     "react-loading": "^2.0.3",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.2",
+    "rive-react": "^4.18.9",
     "spinner": "^0.2.4",
     "zod": "^3.24.2"
   },
