--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "lucide": "^0.487.0",
     "lucide-react": "^0.468.0",
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.3",
+    "pdf-lib": "^1.17.1",
     "prettier": "^3.3.3",
     "prisma": "^6.5.0",
     "react": "^19.1.0",
@@ -49,6 +51,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-beautiful-dnd": "^13.1.8",
