--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.6",
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@vercel/analytics": "^1.5.0",
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide": "^0.487.0",
     "lucide-react": "^0.468.0",
     "next": "^15.3.1",
