--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-toast": "^1.2.13",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@rive-app/react-canvas": "^4.18.9",
     "@supabase/ssr": "^0.6.1",
