--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-navigation-menu": "^1.2.6",
     "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toast": "^1.2.13",
@@ -41,6 +42,7 @@
     "pdf-lib": "^1.17.1",
     "prettier": "^3.3.3",
     "prisma": "^6.5.0",
+    "query-string": "^9.1.2",
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -52,6 +54,7 @@
     "recharts": "^2.15.2",
     "rive-react": "^4.18.9",
     "spinner": "^0.2.4",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
