--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@heroui/spinner": "^2.2.16",
+    "@heroui/system": "^2.4.15",
+    "@heroui/theme": "^2.4.15",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-alert-dialog": "^1.1.11",
@@ -36,6 +39,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.11.4",
     "lucide": "^0.487.0",
     "lucide-react": "^0.468.0",
     "next": "^15.3.1",
