--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "^3.3.3",
     "prisma": "^6.5.0",
     "query-string": "^9.1.2",
+    "re-resizable": "^6.11.2",
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
