--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loading": "^2.0.3",
+    "react-markdown": "^10.1.0",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.2",
     "rive-react": "^4.18.9",
